@@ -29,7 +29,9 @@
 
 namespace libvoikko { namespace compatibility {
 
-static VoikkoHandle * voikko_options = 0;
+/** Only MAX_HANDLES - 1 handles are actually available because handle 0 is not used. */
+static const int MAX_HANDLES = 5;
+static VoikkoHandle ** handles = 0;
 
 /**
  * Converts "something" to "fi-x-somethin-g"
@@ -49,28 +51,61 @@ static char * convertVariantToBCP47(const char * variant) {
 	return language;
 }
 
+/**
+ * Find a slot for new instance handle. Not thread safe.
+ * @return index of available instance slot or -1 if all slots are full.
+ */
+static int findFreeSlotForHandle() {
+	if (!handles) {
+		handles = new VoikkoHandle*[MAX_HANDLES];
+		memset(handles, 0, MAX_HANDLES * sizeof(VoikkoHandle*));
+	}
+	// Slot 0 is not used in order to ensure compatibility with old behaviour
+	// as much as possible.
+	for (int i = 1; i < MAX_HANDLES; i++) {
+		if (!handles[i]) {
+			return i;
+		}
+	}
+	return -1;
+}
+
+/**
+ * Free memory reserved for handles if no handles exist anymore.
+ */
+static void freeHandlesIfPossible() {
+	for (int i = 1; i < MAX_HANDLES; i++) {
+		if (handles[i]) {
+			return;
+		}
+	}
+	delete[] handles;
+	handles = 0;
+}
+
 VOIKKOEXPORT const char * voikko_init_with_path(int * handle, const char * langcode,
                                    int cache_size, const char * path) {
-	if (voikko_options) {
+	int handleIndex = findFreeSlotForHandle();
+	if (handleIndex < 0) {
 		return "Maximum handle count exceeded";
 	}
 	const char * error;
 	if (langcode) {
 		if (strcmp("", langcode) == 0 || strcmp("default", langcode) == 0 ||
 		    strcmp("default", langcode) == 0 || strcmp("fi_FI", langcode) == 0) {
-			voikko_options = voikkoInit(&error, "fi", path);
+			handles[handleIndex] = voikkoInit(&error, "fi", path);
 		} else {
 			char * language = convertVariantToBCP47(langcode);
-			voikko_options = voikkoInit(&error, language, path);
+			handles[handleIndex] = voikkoInit(&error, language, path);
 			delete[] language;
 		}
 	} else {
 		return "Null language code is not allowed";
 	}
 	
-	if (voikko_options) {
-		voikkoSetIntegerOption(voikko_options, VOIKKO_SPELLER_CACHE_SIZE, cache_size);
-		*handle = 1;
+	if (handles[handleIndex]) {
+		voikkoSetIntegerOption(handles[handleIndex], VOIKKO_SPELLER_CACHE_SIZE, cache_size);
+		*handle = handleIndex;
 		return 0;
 	} else {
 		*handle = 0;
@@ -83,25 +118,26 @@ VOIKKOEXPORT const char * voikko_init(int * handle, const char * langcode, int c
 }
 
 VOIKKOEXPORT int voikko_terminate(int handle) {
-	if (handle == 1 && voikko_options) {
-		voikkoTerminate(voikko_options);
-		voikko_options = 0;
+	if (handle >= 1 && handle < MAX_HANDLES && handles[handle]) {
+		voikkoTerminate(handles[handle]);
+		handles[handle] = 0;
+		freeHandlesIfPossible();
 		return 1;
 	} else {
 		return 0;
 	}
 }
 
-VOIKKOEXPORT int voikko_set_bool_option(int /*handle*/, int option, int value) {
-	return voikkoSetBooleanOption(voikko_options, option, value);
+VOIKKOEXPORT int voikko_set_bool_option(int handle, int option, int value) {
+	return voikkoSetBooleanOption(handles[handle], option, value);
 }
 
-VOIKKOEXPORT int voikko_set_int_option(int /*handle*/, int option, int value) {
+VOIKKOEXPORT int voikko_set_int_option(int handle, int option, int value) {
 	if (option == 5) {
 		// deprecated option VOIKKO_INTERSECT_COMPOUND_LEVEL
 		return 1;
 	}
-	return voikkoSetIntegerOption(voikko_options, option, value);
+	return voikkoSetIntegerOption(handles[handle], option, value);
 }
 
 VOIKKOEXPORT int voikko_set_string_option(int /*handle*/, int option, const char * value) {
@@ -116,32 +152,32 @@ VOIKKOEXPORT int voikko_set_string_option(int /*handle*/, int option, const char
 	return 0;
 }
 
-VOIKKOEXPORT int voikko_spell_cstr(int /*handle*/, const char * word) {
-	return voikkoSpellCstr(voikko_options, word);
+VOIKKOEXPORT int voikko_spell_cstr(int handle, const char * word) {
+	return voikkoSpellCstr(handles[handle], word);
 }
 
-VOIKKOEXPORT int voikko_spell_ucs4(int /*handle*/, const wchar_t * word) {
-	return voikkoSpellUcs4(voikko_options, word);
+VOIKKOEXPORT int voikko_spell_ucs4(int handle, const wchar_t * word) {
+	return voikkoSpellUcs4(handles[handle], word);
 }
 
-VOIKKOEXPORT char ** voikko_suggest_cstr(int /*handle*/, const char * word) {
-	char ** suggestions = voikkoSuggestCstr(voikko_options, word);
+VOIKKOEXPORT char ** voikko_suggest_cstr(int handle, const char * word) {
+	char ** suggestions = voikkoSuggestCstr(handles[handle], word);
 	utils::StringUtils::convertCStringArrayToMalloc(suggestions);
 	return suggestions;
 }
 
-VOIKKOEXPORT wchar_t ** voikko_suggest_ucs4(int /*handle*/, const wchar_t * word) {
-	return voikkoSuggestUcs4(voikko_options, word);
+VOIKKOEXPORT wchar_t ** voikko_suggest_ucs4(int handle, const wchar_t * word) {
+	return voikkoSuggestUcs4(handles[handle], word);
 }
 
-VOIKKOEXPORT char * voikko_hyphenate_cstr(int /*handle*/, const char * word) {
-	char * hyphenation = voikkoHyphenateCstr(voikko_options, word);
+VOIKKOEXPORT char * voikko_hyphenate_cstr(int handle, const char * word) {
+	char * hyphenation = voikkoHyphenateCstr(handles[handle], word);
 	utils::StringUtils::convertCStringToMalloc(hyphenation);
 	return hyphenation;
 }
 
-VOIKKOEXPORT char * voikko_hyphenate_ucs4(int /*handle*/, const wchar_t * word) {
-	char * hyphenation = voikkoHyphenateUcs4(voikko_options, word);
+VOIKKOEXPORT char * voikko_hyphenate_ucs4(int handle, const wchar_t * word) {
+	char * hyphenation = voikkoHyphenateUcs4(handles[handle], word);
 	utils::StringUtils::convertCStringToMalloc(hyphenation);
 	return hyphenation;
 }
@@ -159,32 +195,32 @@ VOIKKOEXPORT void voikko_free_hyphenate(char * hyphenate_result) {
 	free(hyphenate_result);
 }
 
-VOIKKOEXPORT enum voikko_token_type voikko_next_token_ucs4(int /*handle*/, const wchar_t * text,
+VOIKKOEXPORT enum voikko_token_type voikko_next_token_ucs4(int handle, const wchar_t * text,
 		size_t textlen, size_t * tokenlen) {
-	return voikkoNextTokenUcs4(voikko_options, text, textlen, tokenlen);
+	return voikkoNextTokenUcs4(handles[handle], text, textlen, tokenlen);
 }
 
-VOIKKOEXPORT enum voikko_token_type voikko_next_token_cstr(int /*handle*/, const char * text,
+VOIKKOEXPORT enum voikko_token_type voikko_next_token_cstr(int handle, const char * text,
 		size_t textlen, size_t * tokenlen) {
-	return voikkoNextTokenCstr(voikko_options, text, textlen, tokenlen);
+	return voikkoNextTokenCstr(handles[handle], text, textlen, tokenlen);
 }
 
-VOIKKOEXPORT enum voikko_sentence_type voikko_next_sentence_start_ucs4(int /*handle*/,
+VOIKKOEXPORT enum voikko_sentence_type voikko_next_sentence_start_ucs4(int handle,
 		const wchar_t * text, size_t textlen, size_t * sentencelen) {
-	return voikkoNextSentenceStartUcs4(voikko_options, text, textlen, sentencelen);
+	return voikkoNextSentenceStartUcs4(handles[handle], text, textlen, sentencelen);
 }
 
-VOIKKOEXPORT enum voikko_sentence_type voikko_next_sentence_start_cstr(int /*handle*/,
+VOIKKOEXPORT enum voikko_sentence_type voikko_next_sentence_start_cstr(int handle,
                           const char * text, size_t textlen, size_t * sentencelen) {
-	return voikkoNextSentenceStartCstr(voikko_options, text, textlen, sentencelen);
+	return voikkoNextSentenceStartCstr(handles[handle], text, textlen, sentencelen);
 }
 
-VOIKKOEXPORT voikko_grammar_error voikko_next_grammar_error_ucs4(int /*handle*/, const wchar_t * text,
+VOIKKOEXPORT voikko_grammar_error voikko_next_grammar_error_ucs4(int handle, const wchar_t * text,
 		 size_t textlen, size_t startpos, int skiperrors) {
 	voikko_grammar_error gError;
 	gError.error_level = 0;
 	gError.error_description = 0;
-	VoikkoGrammarError * error = voikkoNextGrammarErrorUcs4(voikko_options, text, textlen, startpos, skiperrors);
+	VoikkoGrammarError * error = voikkoNextGrammarErrorUcs4(handles[handle], text, textlen, startpos, skiperrors);
 	if (error) {
 		gError.error_code = voikkoGetGrammarErrorCode(error);
 		gError.startpos = voikkoGetGrammarErrorStartPos(error);
@@ -238,13 +274,13 @@ VOIKKOEXPORT voikko_grammar_error voikko_next_grammar_error_cstr(int handle, con
 }
 
 VOIKKOEXPORT voikko_mor_analysis ** voikko_analyze_word_ucs4(
-		int /*handle*/, const wchar_t * word) {
-	return voikkoAnalyzeWordUcs4(voikko_options, word);
+		int handle, const wchar_t * word) {
+	return voikkoAnalyzeWordUcs4(handles[handle], word);
 }
 
 VOIKKOEXPORT voikko_mor_analysis ** voikko_analyze_word_cstr(
-		int /*handle*/, const char * word) {
-	return voikkoAnalyzeWordCstr(voikko_options, word);
+		int handle, const char * word) {
+	return voikkoAnalyzeWordCstr(handles[handle], word);
 }
 
 } }
