@@ -1,3 +1,9 @@
+2010-05-11 Harri Pitkänen <hatapitk@iki.fi>
+	* Adjust old API so that up to four simultaneous handles can be opened.
+	  This method is not thread safe but it is no worse than the old single
+	  handle check. It should fix many real world problems (eg. with Evolution)
+	  while we wait for applications to switch to the new API.
+
 2010-05-02 Harri Pitkänen <hatapitk@iki.fi>
 	* Rename listSupportedLanguages -> listSupportedSpellingLanguages.
 	* Improve repeating words check (Trac #2).
